adjusting widths to prevent items from overflowing

--- a/src/app/charities/current/current.component.scss
+++ b/src/app/charities/current/current.component.scss
@@ -13,7 +13,7 @@
   }
 
   &__details{
-    padding: 2.43vw 4.5138vw 4.5vw 2vh;
+    padding: 2.43vw 4.5138vw 4.5vw 2vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
