--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,3 +1,6 @@
+.home{
+  width: 100vw;
+}
 .zIndex{
   z-index: 3;
 }
