--- a/src/app/core/home/lifting-hearts/lifting-hearts.component.scss
+++ b/src/app/core/home/lifting-hearts/lifting-hearts.component.scss
@@ -3,6 +3,7 @@
 .main {
   display: flex;
   height: 35vw;
+  width: 100vw;
 
   &--left {
     padding: 5vw 7.5vw 4.8vw 6.25vw;
