--- a/src/app/core/home/social/social.component.scss
+++ b/src/app/core/home/social/social.component.scss
@@ -1,6 +1,7 @@
 @import "../../../shared/styles/styleVars";
 
 .flexWrap{
+  width: 100vw;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -9,7 +10,7 @@
   &--box{
     background: $primaryAccentColor;
     border: none;
-    width: calc(100%/3);
+    width: calc(100vw/3);
     margin-bottom: -13px;
     border-width: 0px;
     height: 33vw;
@@ -21,7 +22,7 @@
 
   &--share{
     background: $primaryAccentColor;
-  
+
     height: 100%;
     display: flex;
     justify-content: center;
